--- a/apps/learning_area/static/css/learning_style.css
+++ b/apps/learning_area/static/css/learning_style.css
@@ -64,3 +64,48 @@
     border-radius: 5px;
     white-space: nowrap;
 }
+
+/* 搜尋圖標的hover效果 */
+.search-icon {
+    position: relative;
+    cursor: pointer;
+}
+
+.search-icon:hover::after {
+    content: "搜尋";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    right: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+/* 搜尋框的樣式 */
+.search-container {
+    position: relative;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.search-icon {
+    /*position: absolute;
+    left: 3px;
+    top: 57%;*/
+    font-size: 20px; /* Adjusted size */
+    /*transform: translateY(-45%);*/
+    color: #888;
+}
+
+.search-input {
+    margin-left: 5px;
+    padding-left: 5px; /* Adjust as needed */
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    height: 30px; /* Adjust as needed */
+    width: 150px;
+    font-size: 18px;
+    outline: none;
+}
