每一張筆記板的外觀配置完成

--- a/apps/homepage/templates/navbar.html
+++ b/apps/homepage/templates/navbar.html
@@ -29,18 +29,18 @@
                   </li>
                 </div>
                 <div class="p-1 bd-highlight">
-                  <li class="nav-item {% block note_active %}{% endblock note_active %}">
-                    <a class="nav-link" href="/note/">筆記區 {% block note_active_span %}{% endblock note_active_span %}</a>
-                  </li>
-                </div>
-                <div class="p-1 bd-highlight">
                   <li class="nav-item {% block exercise_active %}{% endblock exercise_active %}">
                     <a class="nav-link" href="/exercise/">習題區 {% block exercise_active_span %}{% endblock exercise_active_span %}</a>
                   </li>
                 </div>
                 <div class="p-1 bd-highlight">
-                  <li class="nav-item {% block stats_active %}{% endblock stats_active %}">
-                    <a class="nav-link" href="/stats/">統計圖表區 {% block stats_active_span %}{% endblock stats_active_span %}</a>
+                  <li class="nav-item {% block note_active %}{% endblock note_active %}">
+                    <a class="nav-link" href="/note/">筆記區 {% block note_active_span %}{% endblock note_active_span %}</a>
+                  </li>
+                </div>
+                <div class="p-1 bd-highlight">
+                  <li class="nav-item {% block all_notes_active %}{% endblock all_notes_active %}">
+                    <a class="nav-link" href="/all_notes/">所有筆記板 {% block all_notes_active_span %}{% endblock all_notes_active_span %}</a>
                   </li>
                 </div>
               </ul>
