--- a/apps/note_area/static/css/note_style2.css
+++ b/apps/note_area/static/css/note_style2.css
@@ -262,6 +262,42 @@
     white-space: nowrap;
 }
 
+/* 播放清單-重新命名的hover效果 */
+.playlist-rename {
+    position: relative;
+    cursor: pointer;
+}
+
+.playlist-rename:hover::after {
+    content: "重新命名";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    right: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+/* 播放清單-刪除的hover效果 */
+.playlist-delete {
+    position: relative;
+    cursor: pointer;
+}
+
+.playlist-delete:hover::after {
+    content: "刪除";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
 /* 縮小表格中每一列所佔的大小比例 */
 .table td,
   .table th {
