--- a/apps/all_notes_area/static/css/all_notes_style2.css
+++ b/apps/all_notes_area/static/css/all_notes_style2.css
@@ -4,7 +4,6 @@
 }
 
 .display-data-box {
-    
     height: 200px; /* Adjust height as needed */
     border: 1px solid black;
     border-radius: 10px;
@@ -21,13 +20,64 @@
     cursor: pointer; /* Change cursor style to pointer */
 }
 
-.description {
+.description, .date-answer {
     font-size: 1.1rem; /* Increase font size slightly for better readability */
     color: #333; /* Darker text color for better contrast */
     line-height: 1.4; /* Increase line height for better spacing */
 }
 
-.period {
+.period, .author-id {
     font-size: 0.8rem;
     color: #666;
+}
+
+.subject-name, .location {
+    color: #007bff;
+    font-weight: bold;
+    margin-top: 0.3rem;
+}
+
+/* 搜尋圖標的hover效果 */
+.search-icon {
+    position: relative;
+    cursor: pointer;
+}
+
+.search-icon:hover::after {
+    content: "搜尋";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    right: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+/* 搜尋框的樣式 */
+.search-container {
+    position: relative;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.search-icon {
+    /*position: absolute;
+    left: 3px;
+    top: 57%;*/
+    font-size: 20px; /* Adjusted size */
+    /*transform: translateY(-45%);*/
+    color: #888;
+}
+
+.search-input {
+    margin-left: 5px;
+    padding-left: 5px; /* Adjust as needed */
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    height: 30px; /* Adjust as needed */
+    width: 150px;
+    font-size: 18px;
+    outline: none;
 }
